--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ShittyLabs/chaos-sort"
+  },
+  "readme": "https://github.com/ShittyLabs/chaos-sort/blob/main/README.md",
+  "badges": [],
   "files": [
     "LICENSE",
     "dist/"
